# join-ai

./: .pre-commit-config.yaml  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  decommenter.rs  languages.toml  lib.rs  main.rs  processor.rs  walker.rs
src/decommenter/: logic.rs  mod.rs
