[package]
name = "join-ai"
version = "0.1.0"
edition = "2024"
description = "A tool to traverse files in a folder and concatenate them into a single text file for GenAI models."

[dependencies]
anyhow = "1.0.99"
assert_fs = "1.1.3"
clap = { version = "4.5.45", features = ["derive"] }
content_inspector = "0.2.4"
ignore = "0.4.23"

[dev-dependencies]
tempfile = "3.20.0"
