[package]
name = "join-ai"
authors = ["Luiz Otavio Vilas Boas Oliveira <luiz.vbo@gmail.com>"]
license = "MIT"
repository = "https://github.com/luizvbo/join-ai"
readme = "README.md"
version = "0.1.1"
edition = "2024"
description = "A tool to traverse files in a folder and concatenate them into a single text file for GenAI models."

[dependencies]
anstyle = "1.0.11"
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive", "color"] }
content_inspector = "0.2.4"
ignore = "0.4.23"

[dev-dependencies]
tempfile = "3.20.0"
assert_fs = "1.1.3"
